--- a/src/ui/configuration/AccelCalibrationConfig.ui
+++ b/src/ui/configuration/AccelCalibrationConfig.ui
@@ -57,7 +57,7 @@
      <height>401</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="2,2,2,2,2,2,2,1">
     <item>
      <widget class="QLabel" name="accelDescLabel">
       <property name="text">
@@ -186,6 +186,19 @@ Accelerometer</string>
        </spacer>
       </item>
      </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
