--- a/src/ui/uas/UASActionsWidget.ui
+++ b/src/ui/uas/UASActionsWidget.ui
@@ -26,31 +26,24 @@
       <property name="margin">
        <number>6</number>
       </property>
-      <item row="0" column="0">
-       <widget class="QComboBox" name="waypointListComboBox"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLabel" name="currentWaypointLabel">
-        <property name="text">
-         <string>Current:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
+      <item row="1" column="1">
        <widget class="QPushButton" name="goToWaypointButton">
         <property name="text">
          <string>Go To Waypoint</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="1" column="0">
+       <widget class="QComboBox" name="waypointListComboBox"/>
+      </item>
+      <item row="3" column="1">
        <widget class="QPushButton" name="restartMissionButton">
         <property name="text">
          <string>Restart Mission</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0" colspan="2">
+      <item row="4" column="0" colspan="2">
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
          <widget class="QSpinBox" name="altitudeSpinBox"/>
@@ -64,7 +57,7 @@
         </item>
        </layout>
       </item>
-      <item row="3" column="0" colspan="2">
+      <item row="5" column="0" colspan="2">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QSpinBox" name="speedSpinBox"/>
@@ -77,6 +70,13 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="currentWaypointLabel">
+        <property name="text">
+         <string>Current WP:</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
