--- a/src/ui/configuration/Radio3DRConfig.ui
+++ b/src/ui/configuration/Radio3DRConfig.ui
@@ -29,7 +29,7 @@
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="loadSettingsButton">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -42,7 +42,7 @@
     <string>Load Settings</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="saveSettingsButton">
    <property name="geometry">
     <rect>
      <x>180</x>
@@ -55,7 +55,7 @@
     <string>Save Settings</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_3">
+  <widget class="QPushButton" name="uploadFirmwareButton">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -68,7 +68,7 @@
     <string>Upload Firmware</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_4">
+  <widget class="QPushButton" name="resetDefaultsButton">
    <property name="geometry">
     <rect>
      <x>510</x>
@@ -136,6 +136,9 @@
     </item>
     <item row="8" column="3">
      <widget class="QLabel" name="label_12">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="text">
        <string>Node Dest.</string>
       </property>
@@ -145,7 +148,11 @@
      </widget>
     </item>
     <item row="8" column="4">
-     <widget class="QComboBox" name="nodeDestComboBox"/>
+     <widget class="QComboBox" name="nodeDestComboBox">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
     </item>
     <item row="8" column="1">
      <widget class="QCheckBox" name="mavLinkCheckBox">
@@ -155,7 +162,11 @@
      </widget>
     </item>
     <item row="9" column="4">
-     <widget class="QComboBox" name="nodeCountComboBox"/>
+     <widget class="QComboBox" name="nodeCountComboBox">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_3">
@@ -169,6 +180,9 @@
     </item>
     <item row="7" column="3">
      <widget class="QLabel" name="label_11">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="text">
        <string>Node ID</string>
       </property>
@@ -177,9 +191,6 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="4">
-     <widget class="QComboBox" name="numberChannelsComboBox"/>
-    </item>
     <item row="9" column="1">
      <widget class="QCheckBox" name="opResendCheckBox">
       <property name="text">
@@ -187,20 +198,20 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="label_5">
+    <item row="2" column="3">
+     <widget class="QLabel" name="label_6">
       <property name="text">
-       <string>Air Baud</string>
+       <string>Min Freq.</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
-    <item row="2" column="3">
-     <widget class="QLabel" name="label_6">
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_5">
       <property name="text">
-       <string>Min Freq.</string>
+       <string>Air Baud</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -227,20 +238,17 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
-     <widget class="QComboBox" name="netIdComboBox"/>
-    </item>
     <item row="2" column="1">
      <widget class="QLineEdit" name="formatLineEdit"/>
-    </item>
-    <item row="6" column="4">
-     <widget class="QComboBox" name="lbtRssiComboBox"/>
     </item>
     <item row="4" column="1">
      <widget class="QComboBox" name="airBaudComboBox"/>
     </item>
     <item row="9" column="2" colspan="2">
      <widget class="QLabel" name="label_13">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="text">
        <string>Node Count</string>
       </property>
@@ -276,37 +284,12 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </item>
-    <item row="5" column="4">
-     <widget class="QComboBox" name="dutyComboBox"/>
-    </item>
     <item row="7" column="4">
-     <widget class="QComboBox" name="nodeIdComboBox"/>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_1">
-      <property name="text">
-       <string>Version</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-      <property name="buddy">
-       <cstring>versionLineEdit</cstring>
+     <widget class="QComboBox" name="nodeIdComboBox">
+      <property name="enabled">
+       <bool>false</bool>
       </property>
      </widget>
-    </item>
-    <item row="5" column="3">
-     <widget class="QLabel" name="label_7">
-      <property name="text">
-       <string>Duty Cycle</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QComboBox" name="baudComboBox"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
@@ -318,27 +301,92 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </item>
-    <item row="0" column="1" colspan="3">
-     <widget class="QLineEdit" name="versionLineEdit"/>
+    <item row="3" column="1">
+     <widget class="QComboBox" name="baudComboBox"/>
+    </item>
+    <item row="5" column="3">
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>Duty Cycle</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" colspan="2">
+     <widget class="QLabel" name="versionLabel">
+      <property name="minimumSize">
+       <size>
+        <width>210</width>
+        <height>23</height>
+       </size>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_1">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>23</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Version</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QSpinBox" name="netIdSpinBox">
+      <property name="maximum">
+       <number>499</number>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="4">
+     <widget class="QSpinBox" name="dutyCycleSpinBox">
+      <property name="maximum">
+       <number>100</number>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="4">
+     <widget class="QSpinBox" name="lbtRssiSpinBox">
+      <property name="minimum">
+       <number>0</number>
+      </property>
+      <property name="value">
+       <number>0</number>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="4">
+     <widget class="QSpinBox" name="numChannelsSpinBox">
+      <property name="maximum">
+       <number>50</number>
+      </property>
+     </widget>
     </item>
    </layout>
    <zorder>label_1</zorder>
-   <zorder>versionLineEdit</zorder>
    <zorder>label_2</zorder>
    <zorder>formatLineEdit</zorder>
    <zorder>label_3</zorder>
    <zorder>label_6</zorder>
    <zorder>minFreqComboBox</zorder>
-   <zorder>groupBox_2</zorder>
    <zorder>maxFreqComboBox</zorder>
    <zorder>baudComboBox</zorder>
    <zorder>label_8</zorder>
    <zorder>label_9</zorder>
-   <zorder>numberChannelsComboBox</zorder>
    <zorder>label_7</zorder>
-   <zorder>dutyComboBox</zorder>
    <zorder>label_10</zorder>
-   <zorder>lbtRssiComboBox</zorder>
    <zorder>label_11</zorder>
    <zorder>nodeIdComboBox</zorder>
    <zorder>label_12</zorder>
@@ -349,13 +397,17 @@ p, li { white-space: pre-wrap; }
    <zorder>label_5</zorder>
    <zorder>airBaudComboBox</zorder>
    <zorder>label_14</zorder>
-   <zorder>netIdComboBox</zorder>
    <zorder>label_17</zorder>
    <zorder>txPowerComboBox</zorder>
    <zorder>eccCheckBox</zorder>
    <zorder>mavLinkCheckBox</zorder>
    <zorder>opResendCheckBox</zorder>
    <zorder>rssiTextEdit</zorder>
+   <zorder>versionLabel</zorder>
+   <zorder>netIdSpinBox</zorder>
+   <zorder>dutyCycleSpinBox</zorder>
+   <zorder>lbtRssiSpinBox</zorder>
+   <zorder>numChannelsSpinBox</zorder>
   </widget>
   <widget class="QProgressBar" name="progressBar">
    <property name="geometry">
@@ -394,33 +446,17 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item row="2" column="4">
-     <widget class="QComboBox" name="minFreqComboBox_2"/>
-    </item>
-    <item row="8" column="3">
-     <widget class="QLabel" name="label_19">
-      <property name="text">
-       <string>Node Dest.</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="8" column="4">
-     <widget class="QComboBox" name="nodeDestComboBox_2"/>
+     <widget class="QComboBox" name="minFreqComboBox_remote"/>
     </item>
     <item row="8" column="1">
-     <widget class="QCheckBox" name="mavLinkCheckBox_2">
+     <widget class="QCheckBox" name="mavLinkCheckBox_remote">
       <property name="text">
        <string>MAVLink</string>
       </property>
      </widget>
     </item>
-    <item row="9" column="4">
-     <widget class="QComboBox" name="nodeCountComboBox_2"/>
-    </item>
     <item row="9" column="1">
-     <widget class="QCheckBox" name="opResendCheckBox_2">
+     <widget class="QCheckBox" name="opResendCheckBox_remote">
       <property name="text">
        <string>Op Resend</string>
       </property>
@@ -446,23 +482,10 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </item>
-    <item row="4" column="4">
-     <widget class="QComboBox" name="numberChannelsComboBox_2"/>
-    </item>
     <item row="6" column="0">
      <widget class="QLabel" name="label_23">
       <property name="text">
        <string>Tx Power</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="3">
-     <widget class="QLabel" name="label_20">
-      <property name="text">
-       <string>Node ID</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -479,20 +502,11 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
-     <widget class="QComboBox" name="netIdComboBox_2"/>
-    </item>
-    <item row="0" column="1" colspan="3">
-     <widget class="QLineEdit" name="versionLineEdit_2"/>
-    </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="formatLineEdit_2"/>
-    </item>
-    <item row="6" column="4">
-     <widget class="QComboBox" name="lbtRssiComboBox_2"/>
+     <widget class="QLineEdit" name="formatLineEdit_remote"/>
     </item>
     <item row="4" column="1">
-     <widget class="QComboBox" name="airBaudComboBox_2"/>
+     <widget class="QComboBox" name="airBaudComboBox_remote"/>
     </item>
     <item row="6" column="3">
      <widget class="QLabel" name="label_15">
@@ -505,23 +519,7 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item row="6" column="1">
-     <widget class="QComboBox" name="txPowerComboBox_2"/>
-    </item>
-    <item row="5" column="4">
-     <widget class="QComboBox" name="dutyComboBox_2"/>
-    </item>
-    <item row="7" column="4">
-     <widget class="QComboBox" name="nodeIdComboBox_2"/>
-    </item>
-    <item row="9" column="2" colspan="2">
-     <widget class="QLabel" name="label_25">
-      <property name="text">
-       <string>Node Count</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
+     <widget class="QComboBox" name="txPowerComboBox_remote"/>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="label_26">
@@ -534,10 +532,16 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item row="3" column="4">
-     <widget class="QComboBox" name="maxFreqComboBox_2"/>
+     <widget class="QComboBox" name="maxFreqComboBox_remote"/>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_27">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>23</height>
+       </size>
+      </property>
       <property name="text">
        <string>Version</string>
       </property>
@@ -557,7 +561,7 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QComboBox" name="baudComboBox_2"/>
+     <widget class="QComboBox" name="baudComboBox_remote"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_29">
@@ -580,7 +584,7 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item row="1" column="1" colspan="4">
-     <widget class="QTextEdit" name="rssiTextEdit_2"/>
+     <widget class="QTextEdit" name="rssiTextEdit_remote"/>
     </item>
     <item row="3" column="3">
      <widget class="QLabel" name="label_16">
@@ -593,15 +597,112 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item row="7" column="1">
-     <widget class="QCheckBox" name="eccCheckBox_2">
+     <widget class="QCheckBox" name="eccCheckBox_remote">
       <property name="text">
        <string>ECC</string>
       </property>
      </widget>
     </item>
+    <item row="0" column="1" colspan="2">
+     <widget class="QLabel" name="versionLabel_remote">
+      <property name="minimumSize">
+       <size>
+        <width>210</width>
+        <height>23</height>
+       </size>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QSpinBox" name="netIdSpinBox_remote">
+      <property name="maximum">
+       <number>499</number>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="4">
+     <widget class="QSpinBox" name="dutyCycleSpinBox_remote">
+      <property name="maximum">
+       <number>100</number>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="4">
+     <widget class="QSpinBox" name="lbtRssiSpinBox_remote"/>
+    </item>
+    <item row="4" column="4">
+     <widget class="QSpinBox" name="numChannelsSpinBox_remote">
+      <property name="maximum">
+       <number>50</number>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="4">
+     <widget class="QComboBox" name="nodeCountComboBox_remote">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="2" colspan="2">
+     <widget class="QLabel" name="label_25">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="text">
+       <string>Node Count</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="4">
+     <widget class="QComboBox" name="nodeDestComboBox_remote">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="3">
+     <widget class="QLabel" name="label_19">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="text">
+       <string>Node Dest.</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="3">
+     <widget class="QLabel" name="label_20">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="text">
+       <string>Node ID</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="4">
+     <widget class="QComboBox" name="nodeIdComboBox_remote">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton_5">
+  <widget class="QPushButton" name="copyToRemoteButton">
    <property name="geometry">
     <rect>
      <x>260</x>
@@ -694,6 +795,32 @@ Items to Remote</string>
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QLabel" name="localStatus">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>440</y>
+     <width>221</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>STATUS:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="remoteStatus">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>440</y>
+     <width>211</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>STATUS:</string>
+   </property>
   </widget>
  </widget>
  <resources/>
