--- a/src/ui/configuration/Radio3DRConfig.ui
+++ b/src/ui/configuration/Radio3DRConfig.ui
@@ -42,7 +42,7 @@
     <string>Load Settings</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="saveSettingsButton">
+  <widget class="QPushButton" name="saveLocalSettingsButton">
    <property name="geometry">
     <rect>
      <x>180</x>
@@ -52,10 +52,10 @@
     </rect>
    </property>
    <property name="text">
-    <string>Save Settings</string>
+    <string>Save Local</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="uploadFirmwareButton">
+  <widget class="QPushButton" name="saveRemoteSettingsButton">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -65,7 +65,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Upload Firmware</string>
+    <string>Save Remote</string>
    </property>
   </widget>
   <widget class="QPushButton" name="resetDefaultsButton">
@@ -239,7 +239,11 @@
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="formatLineEdit"/>
+     <widget class="QLineEdit" name="formatLineEdit">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
     </item>
     <item row="4" column="1">
      <widget class="QComboBox" name="airBaudComboBox"/>
@@ -503,7 +507,11 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="formatLineEdit_remote"/>
+     <widget class="QLineEdit" name="formatLineEdit_remote">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
     </item>
     <item row="4" column="1">
      <widget class="QComboBox" name="airBaudComboBox_remote"/>
